# demand-chain

./: .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  ARCHITECTURE_FLOW.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.db  LICENSE  MCP_DIRECTORY_SUBMISSION.md  README.md  admin.html  alembic.ini  api_docs.html  batch_export.html  chat.html  check_css.py  check_nav.py  clean_suppliers.sql  companies_zjtx.csv  crawled_demands_20260611_122324.json  crawled_demands_20260611_125934.json  crawled_demands_20260612_055719.json  crawled_suppliers_20260611_122324.json  crawled_suppliers_20260611_125127.json  crawled_suppliers_20260611_125934.json  crawled_suppliers_20260612_055719.json  demand_chain.html  demand_square.html  discovered_demands.html  docker-compose.prod.yml  docker-compose.yml  flywheel_dashboard.html  forum.html  forum.js  global_search.html  i18n.js  index.html  leaderboard.html  (+19 more)
.github/: FUNDING.yml
alembic/: env.py
deploy/: test_reg.py
docs/: AGENT_NATIVE_ARCHITECTURE.md  DEPLOY.md  NLNET_PROPOSAL.md  NOTIFICATION_ARCHITECTURE.md  tutorial.html
i18n/: en.json  zh.json
prompts/: demand_template_v1.json
scripts/: auto_classify.py  auto_crawler.py  auto_supplier_v2_crawler.py  auto_supplier_v3_crawler.py  batch_structure.py  check_demands.py  china_enterprise_crawler.py  china_govt_crawler.py  clean_demands.sql  clean_suppliers.sql  cleanup_bad_crawl_data.py  cleanup_demands.py  cleanup_low_quality.py  cleanup_sci_noise.py  cleanup_v2.py  deep_clean_suppliers.py  delete_bad_suppliers.py  delete_bad_suppliers_v2.py  enhanced_crawler.py  (+22 more)
(+69 files in other folders)
